# ScrappingAndPdfTools

./: .env.example  .gitignore  .replit  CHANGELOG.md  CORRECTION_ERREUR_JSON.md  DEPLOYMENT.md  DEPLOYMENT_EN.md  DEPLOYMENT_VPS.md  FIX_413_VPS.md  FIX_VPS_TIMEOUT.md  GUIDE_UPLOAD_PROGRESSIF.md  README.md  README_EN.md  SECURITE_DEPLOIEMENT.md  SOLUTION_VPS_ERREUR_JURISPRUDENCE.md  config.py  deploy.sh  deploy_vps.sh  main.py  patch_vps_jurisprudence.py  pyproject.toml  replit.md  requirements.txt  test_extraction.py
app/: __init__.py  models.py
app/routes/: analyzer.py  contact.py  downloader.py  jurisprudence.py  library.py  logs.py  main.py  merger.py
app/services/: pdf_analyzer.py  pdf_downloader.py  pdf_intelligent_analyzer.py  pdf_jurisprudence_extractor.py  pdf_jurisprudence_extractor_rule_based.py  pdf_merger.py  pdf_text_extractor.py
app/templates/: analyzer.html  base.html  contact.html  downloader.html  error_api_key.html  index.html  jurisprudence.html  library.html  logs.html  merger.html
app/utils/: progress.py  storage.py
attached_assets/: Pasted-Titre-Paiement-d-effets-munis-d-une-signature-contrefaite-exon-ration-de-la-responsabilit-banca-1761262514942_1761262514943.txt
static/js/: jurisprudence-batch.js
