[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "openpyxl>=3.1.5",
    "pypdf>=6.1.1",
    "requests>=2.32.5",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.11",
    "email-validator>=2.3.0",
    "gunicorn>=23.0.0",
]
